--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 @custom-variant dark (&:is(.dark *));
 
 body{
- font-family: "Roboto", sans-serif;
+ /* font-family: "Roboto", sans-serif; */
 }
 
 @theme inline {
@@ -43,6 +43,11 @@ body{
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);
+ --font-roboto: "Roboto", sans-serif;
+}
+
+body{
+ font-family: "Manufacturing Consent", system-ui;
 }
 
 :root {
