--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 @custom-variant dark (&:is(.dark *));
 
 body{
- /* font-family: "Roboto", sans-serif; */
+ font-family: "Roboto", sans-serif;
 }
 
 @theme inline {
@@ -46,9 +46,6 @@ body{
  --font-roboto: "Roboto", sans-serif;
 }
 
-body{
- font-family: "Manufacturing Consent", system-ui;
-}
 
 :root {
  --radius: 0.625rem;
