--- a/app/globals.css
+++ b/app/globals.css
@@ -43,7 +43,7 @@ body{
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);
- --font-roboto: "Roboto", sans-serif;
+ /* --font-roboto: "My Soul"; */
 }
 
 
